// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer /w as drawer bottom 1`] = `
.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  background-color: rgba(43,45,51,0);
  visibility: hidden;
}

.c1 {
  z-index: 2;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 8px 32px 0 rgba(0,0,0,0.08);
  background-color: #FFFFFF;
  position: absolute;
  border-radius: 0px;
  opacity: 1;
  min-width: 460px;
  -webkit-font-smoothing: antialiased;
  overflow-y: auto;
  height: 0px;
  width: 0px;
  max-width: 100%;
  min-width: 100%;
  bottom: -0px;
}

.c3 {
  height: calc( 100% - 32px - 24px - 4px );
}

.c2 {
  color: #AAABAD;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 32px 0 0 32px;
  left: 0;
  top: 0;
  width: auto;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.c2:hover {
  color: #2B2D33;
}

<div
  class="c0"
  data-marker="Fade_3"
>
  <div
    class="c1"
    data-marker="Box_3"
    height="0px"
    orientation="bottom"
    width="0px"
  >
    <div
      class="c2"
      data-marker="CloseIcon_3"
    >
      <svg
        data-marker="Close_3"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs
          data-marker="Close.defs"
        />
        <path
          d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
          data-marker="Close.path"
        />
      </svg>
    </div>
    <div
      class="c3"
      data-marker="Content_3"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Drawer /w as drawer left 1`] = `
.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  background-color: rgba(43,45,51,0);
  visibility: hidden;
}

.c1 {
  z-index: 2;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 8px 32px 0 rgba(0,0,0,0.08);
  background-color: #FFFFFF;
  position: absolute;
  border-radius: 0px;
  opacity: 1;
  min-width: 460px;
  -webkit-font-smoothing: antialiased;
  overflow-y: auto;
  height: 0px;
  width: 0px;
  max-width: 100%;
  min-height: 100%;
  left: -0px;
}

.c3 {
  height: calc( 100% - 32px - 24px - 4px );
}

.c2 {
  color: #AAABAD;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 32px 0 0 32px;
  left: 0;
  top: 0;
  width: auto;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.c2:hover {
  color: #2B2D33;
}

<div
  class="c0"
  data-marker="Fade"
>
  <div
    class="c1"
    data-marker="Box"
    height="0px"
    orientation="left"
    width="0px"
  >
    <div
      class="c2"
      data-marker="CloseIcon"
    >
      <svg
        data-marker="Close"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs
          data-marker="Close.defs"
        />
        <path
          d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
          data-marker="Close.path"
        />
      </svg>
    </div>
    <div
      class="c3"
      data-marker="Content"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Drawer /w as drawer left show 1`] = `
.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  background-color: rgba(43,45,51,0);
  visibility: hidden;
  visibility: visible;
  background-color: rgba(43,45,51,0.24);
}

.c1 {
  z-index: 2;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 8px 32px 0 rgba(0,0,0,0.08);
  background-color: #FFFFFF;
  position: absolute;
  border-radius: 0px;
  opacity: 1;
  min-width: 460px;
  -webkit-font-smoothing: antialiased;
  overflow-y: auto;
  height: 0px;
  width: 0px;
  max-width: 100%;
  min-height: 100%;
  left: -0px;
  left: 0;
}

.c3 {
  height: calc( 100% - 32px - 24px - 4px );
}

.c2 {
  color: #AAABAD;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 32px 0 0 32px;
  left: 0;
  top: 0;
  width: auto;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.c2:hover {
  color: #2B2D33;
}

<div
  class="c0"
  data-marker="Fade_0"
>
  <div
    class="c1"
    data-marker="Box_0"
    height="0px"
    orientation="left"
    width="0px"
  >
    <div
      class="c2"
      data-marker="CloseIcon_0"
    >
      <svg
        data-marker="Close_0"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs
          data-marker="Close.defs"
        />
        <path
          d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
          data-marker="Close.path"
        />
      </svg>
    </div>
    <div
      class="c3"
      data-marker="Content_0"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Drawer /w as drawer right 1`] = `
.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  background-color: rgba(43,45,51,0);
  visibility: hidden;
}

.c1 {
  z-index: 2;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 8px 32px 0 rgba(0,0,0,0.08);
  background-color: #FFFFFF;
  position: absolute;
  border-radius: 0px;
  opacity: 1;
  min-width: 460px;
  -webkit-font-smoothing: antialiased;
  overflow-y: auto;
  height: 0px;
  width: 0px;
  max-width: 100%;
  min-height: 100%;
  right: -0px;
}

.c3 {
  height: calc( 100% - 32px - 24px - 4px );
}

.c2 {
  color: #AAABAD;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 32px 0 0 32px;
  left: 0;
  top: 0;
  width: auto;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.c2:hover {
  color: #2B2D33;
}

<div
  class="c0"
  data-marker="Fade_2"
>
  <div
    class="c1"
    data-marker="Box_2"
    height="0px"
    orientation="right"
    width="0px"
  >
    <div
      class="c2"
      data-marker="CloseIcon_2"
    >
      <svg
        data-marker="Close_2"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs
          data-marker="Close.defs"
        />
        <path
          d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
          data-marker="Close.path"
        />
      </svg>
    </div>
    <div
      class="c3"
      data-marker="Content_2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Drawer /w as drawer top 1`] = `
.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  background-color: rgba(43,45,51,0);
  visibility: hidden;
}

.c1 {
  z-index: 2;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 8px 32px 0 rgba(0,0,0,0.08);
  background-color: #FFFFFF;
  position: absolute;
  border-radius: 0px;
  opacity: 1;
  min-width: 460px;
  -webkit-font-smoothing: antialiased;
  overflow-y: auto;
  height: 0px;
  width: 0px;
  max-width: 100%;
  min-width: 100%;
  top: -0px;
}

.c3 {
  height: calc( 100% - 32px - 24px - 4px );
}

.c2 {
  color: #AAABAD;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  margin: 32px 0 0 32px;
  left: 0;
  top: 0;
  width: auto;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-transition: all .2s;
  transition: all .2s;
}

.c2:hover {
  color: #2B2D33;
}

<div
  class="c0"
  data-marker="Fade_1"
>
  <div
    class="c1"
    data-marker="Box_1"
    height="0px"
    orientation="top"
    width="0px"
  >
    <div
      class="c2"
      data-marker="CloseIcon_1"
    >
      <svg
        data-marker="Close_1"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs
          data-marker="Close.defs"
        />
        <path
          d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
          data-marker="Close.path"
        />
      </svg>
    </div>
    <div
      class="c3"
      data-marker="Content_1"
    >
      content
    </div>
  </div>
</div>
`;
